--- a/index.html
+++ b/index.html
@@ -21,7 +21,22 @@
 
 <body>
     <header class="header">
-        Some Text ....
+
+        <div class="logo-box">
+            <img src="./img/logo-white.png
+            " alt="Logo" class="logo">
+        </div>
+
+        <div class="text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">Outdoors</span>
+                <span class="heading-primary-sub">is were life happens</span>
+            </h1>
+            <button class="text-box-button">
+                discover our tours
+            </button>
+        </div>
+
     </header>
 </body>
 
