bottne + pseudo elmenti hero section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                 <span class="heading-primary-main">Outdoors</span>
                 <span class="heading-primary-sub">is were life happens</span>
             </h1>
-            <button class="text-box-button">
-                discover our tours
-            </button>
+
+            <a href="#" class="btn btn-white btn-animated">Discover Our Tours</a>
         </div>
 
     </header>
